--- a/frontend/src/HomePage01.scss
+++ b/frontend/src/HomePage01.scss
@@ -164,7 +164,7 @@ body {
   width: 85%;
 }
 
-.newsletter_form-right{
+.newsletter_form-right {
   width: 15%;
 }
 
@@ -176,7 +176,7 @@ body {
   line-height: 28px;
   letter-spacing: -0.4px;
   width: 90%;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   &:focus {
     outline: none;
   }
