--- a/frontend/src/Components/CartComps/CartHead/CartHead.scss
+++ b/frontend/src/Components/CartComps/CartHead/CartHead.scss
@@ -1,44 +1,44 @@
-$base-color: #B1B5C3;
+$base-color: #b1b5c3;
 $num-color: white;
 $focus-color: #black;
 
 .cart-head {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-gap: 5%;
-    padding: 0% 20% 5% 20%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-gap: 5%;
+  padding: 0% 20% 5% 20%;
 }
 .cart-head_item {
-    display: flex;
-    flex-direction: row;
-    gap: 5%;
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 26px;
-    padding-bottom: 5%;
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 26px;
+  padding-bottom: 5%;
 }
 .cart-head_num {
-    width: 2em;
-    height: 2em;
-    border-radius: 50%;
-    background-color: $base-color;
-    color: $num-color;
-    text-align: center;
-    align-content: center;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  background-color: $base-color;
+  color: $num-color;
+  text-align: center;
+  align-content: center;
 }
 .cart-head_text {
-    align-content: center;
-    color: $base-color;
+  align-content: center;
+  color: $base-color;
 }
 
 @media screen and (max-width: 480px) {
-    .cart-head {
-        padding: 0;
-        overflow-x: scroll;
-    }
-    .cart-head_item {
-        width: 65vw;
-    }
+  .cart-head {
+    padding: 0;
+    overflow-x: scroll;
+  }
+  .cart-head_item {
+    width: 65vw;
+  }
 }
