Style changes in Cart components

--- a/frontend/src/Components/CartComps/CartSummary/CartSummary.scss
+++ b/frontend/src/Components/CartComps/CartSummary/CartSummary.scss
@@ -43,6 +43,10 @@
   align-items: center;
   width: 100%;
 }
+.cart-summary_choice-right {
+  width: 6em;
+  text-align: right;
+}
 .cart-summary_choice-radio {
   height: 2vh;
   margin: 0;
