--- a/frontend/src/Components/CartComps/CartGoods/CartGoods.scss
+++ b/frontend/src/Components/CartComps/CartGoods/CartGoods.scss
@@ -1,34 +1,35 @@
 .cart-goods {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
-  align-items: center;
-  gap: 5% 0;
   font-family: Inter;
   font-size: 16px;
   font-weight: 600;
   line-height: 26px;
 }
-.cart-goods_col-main {
+.cart-goods_cols {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
   border-bottom: 2px solid rgba(108, 114, 117, 0.5);
-  margin-bottom: 5%;
-  padding-bottom: 5%;
+  padding: 2% 0 2% 0;
+}
+.cart-goods_col-main {
   text-align: left;
 }
-.cart-goods_col-name {
-  border-bottom: 2px solid rgba(108, 114, 117, 0.5);
-  margin-bottom: 10%;
-  padding-bottom: 10%;
-}
+
 .cart-goods_item {
   display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  text-align: center;
+  align-items: center;
+  height: 15vw;
+}
+.cart-goods_item-main {
+  display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 5%;
-  text-align: left;
   height: 100%;
 }
 .cart-goods_item-text {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 10%;
 }
 .cart-goods_item-color {
@@ -54,6 +55,7 @@
   border-radius: 5px;
   align-items: center;
   margin: 0 20% 0 20%;
+  height: 2vw;
 }
 .cart-goods_item-price {
   font-family: Inter;
@@ -84,6 +86,7 @@
   .cart-goods_col-name {
     display: none;
   }
+
   .cart-goods_item {
     grid-row: span 3;
     align-items: center;
