--- a/frontend/src/Components/Footer.scss
+++ b/frontend/src/Components/Footer.scss
@@ -1,7 +1,8 @@
 .footer {
   display: flex;
   flex-direction: column;
-  padding: 80px 160px 32px 160px;
+  padding: 2.5% 20.85vw 2.5% 20.85vw;
+  width: 58.3vw;
   gap: 49px;
   color: white;
   background-color: #141718;
