--- a/frontend/src/Components/Head/Head.scss
+++ b/frontend/src/Components/Head/Head.scss
@@ -8,7 +8,8 @@ $secondary-color: #6c7275;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0 11.15% 0 11.15%;
+  padding: 0 20.85vw 0 20.85vw;
+  width: 58.3vw;
   align-items: center;
   height: 60px;
   line-height: 24px;
