--- a/frontend/src/Shop.scss
+++ b/frontend/src/Shop.scss
@@ -43,4 +43,7 @@ $secondary-color: #605f5f;
   width: 77.7%;
   padding: 0 11.15% 0 11.15%;
   margin: 5% 0 5% 0;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-gap: 5%;
 }
